src/antlr/qsrcParser.js
// Generated from qsrcParser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import qsrcParserListener from './qsrcParserListener.js';
import qsrcParserVisitor from './qsrcParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class qsrcParser extends antlr4.Parser {

    static grammarFileName = "qsrcParser.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, "'&'", null, null, "'='", "'+='", "'-='", 
                            "'/='", "'*='", "'to'", null, null, null, null, 
                            null, null, "'*'", "':'", "'+'", "'-'", "'/'", 
                            "'>'", null, "'<'", null, "'<>'", "'$'", "'!'", 
                            "'!!'", null, null, "'['", "']'", "'{'", "'('", 
                            "')'", "','", "'?'", null, null, null, null, 
                            null, null, null, "'\"\"'", null, null, null, 
                            null, "'}'" ];
    static symbolicNames = [ null, "PassageIdentifier", "PassageEndMarker", 
                             "SYSCALL", "SYSSETTING", "ADDOBJ", "CLOSE", 
                             "COPYARR", "DELACT", "DYNAMIC", "GOSUB", "GOTO", 
                             "XGOTO", "INPUT", "JUMP", "KILLVAR", "MSG", 
                             "OPENGAME", "PLAY", "Print", "PrintNewline", 
                             "PrintNewlinepre", "SAVEGAME", "VIEW", "WAIT", 
                             "ACT", "IF", "ELSEIF", "ELSE", "END", "INVERT", 
                             "AND", "OR", "CommandConnect", "NumberLiteral", 
                             "SET", "EqualOperator", "IncrementOperator", 
                             "DecrementOperator", "DivideSelfOperator", 
                             "MultSelfOperator", "SetToOperator", "TemplateStringEndExpression", 
                             "DOUBLEQUOTE", "SINGLEQUOTE", "TemplateDoubleSingleQuote", 
                             "MOD", "WORD", "STAR", "DPOINT", "PLUS", "MINUS", 
                             "DIVIDE", "GREATER_THAN", "GREAT_EQUAL_THAN", 
                             "LOWER_THAN", "LOWER_EQUAL_THAN", "NEQ", "DOLLAR", 
                             "EXCLAMATIONMARK", "CommentStart", "AttachedComment", 
                             "Multilinecomment", "ARRAYBRACKOPEN", "ARRAYBRACKCLOSE", 
                             "BRACK_OPEN", "ParenthesisLeft", "ParenthesisRight", 
                             "Comma", "Questionmark", "NEWLINE", "WHITESPACE", 
                             "LINEBREAK", "AnythingElse", "EscapedSingleQuote", 
                             "TemplateStringStartExpression", "StringAtom", 
                             "EscapedDoubleQuote", "DQTemplateStringStartExpression", 
                             "DQStringAtom", "EscapedStringTemplateStart", 
                             "InEscapedStringAtom", "BRACK_CLOSE", "MultilineTemplateStringStartExpression", 
                             "AnythingElseInMultiLine", "InComment" ];
    static ruleNames = [ "passage", "block", "statementLine", "emptyLine", 
                         "actBlock", "actInline", "actPicture", "ifInline", 
                         "ifBlock", "elseIfBlock", "elseBlock", "command", 
                         "commandLine", "commandAppended", "addobj", "assignment", 
                         "assignmentNumber", "assignmentString", "assignmentoperator", 
                         "close", "comment", "commentAttached", "copyarr", 
                         "delact", "dynamic", "gosub", "gt", "xgt", "inp", 
                         "jump", "jumpmarker", "killvar", "msg", "multilineBlock", 
                         "multilineContents", "multilineBlockTemplateVar", 
                         "opengame", "play", "print", "printMain", "printNewlineMain", 
                         "printNewlinepreMain", "printEmptyLineMain", "printSide", 
                         "printNewlineSide", "printNewlinepreSide", "printEmptyLineSide", 
                         "savegame", "syscall", "syssetting", "view", "wait", 
                         "identifier", "identifierNumber", "identifierString", 
                         "arrayIndex", "compareOperator", "notEqual", "value", 
                         "comparee", "sum", "term", "addOp", "logicOp", 
                         "mulOp", "factor", "numberLiteralWithOptionalSign", 
                         "functionWithNumberReturn", "invert", "numberOperator", 
                         "functionWithStringReturn", "functionArguments", 
                         "escapedString", "escapedStringContent", "escapedStringTemplateVar", 
                         "stringAtom", "stringTemplateVar", "stringTemplateVarSuffix", 
                         "doubleQuoteAtom", "stringTemplateVarDQ", "stringDQTemplateVarSuffix" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = qsrcParser.ruleNames;
        this.literalNames = qsrcParser.literalNames;
        this.symbolicNames = qsrcParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 58:
    	    		return this.value_sempred(localctx, predIndex);
    	case 59:
    	    		return this.comparee_sempred(localctx, predIndex);
    	case 60:
    	    		return this.sum_sempred(localctx, predIndex);
    	case 61:
    	    		return this.term_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    value_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    comparee_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    sum_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    term_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 3:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	passage() {
	    let localctx = new PassageContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, qsrcParser.RULE_passage);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162;
	        this.match(qsrcParser.PassageIdentifier);
	        this.state = 163;
	        this.block();
	        this.state = 164;
	        this.match(qsrcParser.PassageEndMarker);
	        this.state = 169;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 59)) & ~0x1f) === 0 && ((1 << (_la - 59)) & 2059) !== 0)) {
	            this.state = 167;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 70:
	                this.state = 165;
	                this.match(qsrcParser.NEWLINE);
	                break;
	            case 59:
	            case 60:
	            case 62:
	                this.state = 166;
	                this.comment();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 171;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 172;
	        this.match(qsrcParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, qsrcParser.RULE_block);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 177;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1207959544) !== 0) || ((((_la - 34)) & ~0x1f) === 0 && ((1 << (_la - 34)) & 2533617155) !== 0) || _la===66 || _la===70) {
	            this.state = 174;
	            this.statementLine();
	            this.state = 179;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statementLine() {
	    let localctx = new StatementLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, qsrcParser.RULE_statementLine);
	    try {
	        this.state = 184;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 180;
	            this.actBlock();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 181;
	            this.commandLine();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 182;
	            this.ifBlock();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 183;
	            this.emptyLine();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	emptyLine() {
	    let localctx = new EmptyLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, qsrcParser.RULE_emptyLine);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        this.match(qsrcParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	actBlock() {
	    let localctx = new ActBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, qsrcParser.RULE_actBlock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 188;
	        this.match(qsrcParser.ACT);
	        this.state = 189;
	        this.value(0);
	        this.state = 190;
	        this.match(qsrcParser.DPOINT);
	        this.state = 191;
	        this.match(qsrcParser.NEWLINE);
	        this.state = 192;
	        this.block();
	        this.state = 193;
	        this.match(qsrcParser.END);
	        this.state = 195;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===33) {
	            this.state = 194;
	            this.commandAppended();
	        }

	        this.state = 198;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===61) {
	            this.state = 197;
	            this.commentAttached();
	        }

	        this.state = 200;
	        this.match(qsrcParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	actInline() {
	    let localctx = new ActInlineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, qsrcParser.RULE_actInline);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 202;
	        this.match(qsrcParser.ACT);
	        this.state = 203;
	        this.value(0);
	        this.state = 205;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===68) {
	            this.state = 204;
	            this.actPicture();
	        }

	        this.state = 207;
	        this.match(qsrcParser.DPOINT);
	        this.state = 208;
	        this.command();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	actPicture() {
	    let localctx = new ActPictureContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, qsrcParser.RULE_actPicture);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 210;
	        this.match(qsrcParser.Comma);
	        this.state = 211;
	        this.value(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifInline() {
	    let localctx = new IfInlineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, qsrcParser.RULE_ifInline);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 213;
	        this.match(qsrcParser.IF);
	        this.state = 214;
	        this.value(0);
	        this.state = 215;
	        this.match(qsrcParser.DPOINT);
	        this.state = 216;
	        this.command();
	        this.state = 219;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        if(la_===1) {
	            this.state = 217;
	            this.match(qsrcParser.ELSE);
	            this.state = 218;
	            this.command();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifBlock() {
	    let localctx = new IfBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, qsrcParser.RULE_ifBlock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 221;
	        this.match(qsrcParser.IF);
	        this.state = 222;
	        this.value(0);
	        this.state = 223;
	        this.match(qsrcParser.DPOINT);
	        this.state = 224;
	        this.match(qsrcParser.NEWLINE);
	        this.state = 225;
	        this.block();
	        this.state = 229;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===27) {
	            this.state = 226;
	            this.elseIfBlock();
	            this.state = 231;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 233;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===28) {
	            this.state = 232;
	            this.elseBlock();
	        }

	        this.state = 235;
	        this.match(qsrcParser.END);
	        this.state = 237;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===33) {
	            this.state = 236;
	            this.commandAppended();
	        }

	        this.state = 240;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===61) {
	            this.state = 239;
	            this.commentAttached();
	        }

	        this.state = 242;
	        this.match(qsrcParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseIfBlock() {
	    let localctx = new ElseIfBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, qsrcParser.RULE_elseIfBlock);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 244;
	        this.match(qsrcParser.ELSEIF);
	        this.state = 245;
	        this.value(0);
	        this.state = 246;
	        this.match(qsrcParser.DPOINT);
	        this.state = 247;
	        this.match(qsrcParser.NEWLINE);
	        this.state = 248;
	        this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseBlock() {
	    let localctx = new ElseBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, qsrcParser.RULE_elseBlock);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 250;
	        this.match(qsrcParser.ELSE);
	        this.state = 251;
	        this.match(qsrcParser.NEWLINE);
	        this.state = 252;
	        this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, qsrcParser.RULE_command);
	    try {
	        this.state = 290;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 3:
	        case 4:
	        case 5:
	        case 6:
	        case 7:
	        case 8:
	        case 9:
	        case 10:
	        case 11:
	        case 12:
	        case 13:
	        case 14:
	        case 15:
	        case 16:
	        case 17:
	        case 18:
	        case 19:
	        case 20:
	        case 21:
	        case 22:
	        case 23:
	        case 24:
	        case 30:
	        case 34:
	        case 35:
	        case 43:
	        case 44:
	        case 45:
	        case 47:
	        case 48:
	        case 49:
	        case 50:
	        case 51:
	        case 58:
	        case 65:
	        case 66:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 279;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 254;
	                this.match(qsrcParser.ParenthesisLeft);
	                this.state = 255;
	                this.command();
	                this.state = 256;
	                this.match(qsrcParser.ParenthesisRight);
	                break;

	            case 2:
	                this.state = 258;
	                this.addobj();
	                break;

	            case 3:
	                this.state = 259;
	                this.assignment();
	                break;

	            case 4:
	                this.state = 260;
	                this.close();
	                break;

	            case 5:
	                this.state = 261;
	                this.copyarr();
	                break;

	            case 6:
	                this.state = 262;
	                this.delact();
	                break;

	            case 7:
	                this.state = 263;
	                this.dynamic();
	                break;

	            case 8:
	                this.state = 264;
	                this.gosub();
	                break;

	            case 9:
	                this.state = 265;
	                this.gt();
	                break;

	            case 10:
	                this.state = 266;
	                this.xgt();
	                break;

	            case 11:
	                this.state = 267;
	                this.jump();
	                break;

	            case 12:
	                this.state = 268;
	                this.jumpmarker();
	                break;

	            case 13:
	                this.state = 269;
	                this.killvar();
	                break;

	            case 14:
	                this.state = 270;
	                this.msg();
	                break;

	            case 15:
	                this.state = 271;
	                this.opengame();
	                break;

	            case 16:
	                this.state = 272;
	                this.play();
	                break;

	            case 17:
	                this.state = 273;
	                this.print();
	                break;

	            case 18:
	                this.state = 274;
	                this.savegame();
	                break;

	            case 19:
	                this.state = 275;
	                this.syscall();
	                break;

	            case 20:
	                this.state = 276;
	                this.syssetting();
	                break;

	            case 21:
	                this.state = 277;
	                this.view();
	                break;

	            case 22:
	                this.state = 278;
	                this.wait();
	                break;

	            }
	            this.state = 284;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 281;
	                    this.commandAppended(); 
	                }
	                this.state = 286;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	            }

	            break;
	        case 25:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 287;
	            this.actInline();
	            break;
	        case 59:
	        case 60:
	        case 62:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 288;
	            this.comment();
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 289;
	            this.ifInline();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	commandLine() {
	    let localctx = new CommandLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, qsrcParser.RULE_commandLine);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 292;
	        this.command();
	        this.state = 294;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===33) {
	            this.state = 293;
	            this.commandAppended();
	        }

	        this.state = 297;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===61) {
	            this.state = 296;
	            this.commentAttached();
	        }

	        this.state = 299;
	        this.match(qsrcParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	commandAppended() {
	    let localctx = new CommandAppendedContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, qsrcParser.RULE_commandAppended);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 301;
	        this.match(qsrcParser.CommandConnect);
	        this.state = 303;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===33) {
	            this.state = 302;
	            this.match(qsrcParser.CommandConnect);
	        }

	        this.state = 305;
	        this.command();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	addobj() {
	    let localctx = new AddobjContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, qsrcParser.RULE_addobj);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 307;
	        this.match(qsrcParser.ADDOBJ);
	        this.state = 308;
	        this.value(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, qsrcParser.RULE_assignment);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 311;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===35) {
	            this.state = 310;
	            this.match(qsrcParser.SET);
	        }

	        this.state = 315;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 47:
	            this.state = 313;
	            this.assignmentNumber();
	            break;
	        case 58:
	            this.state = 314;
	            this.assignmentString();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignmentNumber() {
	    let localctx = new AssignmentNumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, qsrcParser.RULE_assignmentNumber);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 317;
	        this.identifierNumber();
	        this.state = 318;
	        this.assignmentoperator();
	        this.state = 319;
	        this.value(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignmentString() {
	    let localctx = new AssignmentStringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, qsrcParser.RULE_assignmentString);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 321;
	        this.identifierString();
	        this.state = 322;
	        this.assignmentoperator();
	        this.state = 325;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 323;
	            this.value(0);
	            break;

	        case 2:
	            this.state = 324;
	            this.multilineBlock();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


